Косметические правки кода